@startuml BurnerSystemController
!include theme.puml

title BurnerSystemController - Burner Relays R1-R3 Only\nPumps are controlled separately by PumpControlModule

class BurnerSystemController {
    - currentMode_: BurnerMode
    - currentPower_: PowerLevel
    - currentTarget_: Temperature_t
    - isActive_: bool
    - mutex_: SemaphoreHandle_t
    --
    + initialize(): Result<void>
    + shutdown(): void
    + activateHeatingMode(targetTemp, power = AUTO): Result<void>
    + activateWaterMode(targetTemp, power = AUTO): Result<void>
    + switchMode(newMode, targetTemp): Result<void>
    + setPowerLevel(power): Result<void>
    + deactivate(): Result<void>
    + emergencyShutdown(reason): Result<void>
    + performSafetyCheck(): Result<void>
    + isActive(): bool
    + getCurrentMode(): BurnerMode
    + getCurrentPowerLevel(): PowerLevel
    + getCurrentTargetTemp(): Temperature_t
    --
    - buildRelayStates(mode, power): array of 8 bool
    - executeRelayBatch(states): Result<void>
}

enum BurnerMode {
    OFF
    HEATING
    WATER
    BOTH
}

enum PowerLevel {
    HALF
    FULL
    AUTO
}

class RelayControlTask {
    + setRelayState(relay, on) {static}
    + setRelayStateEmergency(relay, on) {static}
}

enum RelayIndex {
    R1 BURNER_ENABLE - heating mode, half power
    R2 POWER_BOOST - ON means full power
    R3 WATER_MODE - water mode, half power
    R4 VALVE - no writer
    R5 HEATING_PUMP
    R6 WATER_PUMP
    R7 SPARE
    R8 ALARM - lockout only
}

' Callers
class BurnerStateMachine
class CentralizedFailsafe
class BurnerControlTask
class ErrorHandler
class RYN4ProcessingTask

' Pumps: separate, never commanded by BurnerSystemController
package "Pumps (PumpControlModule)" {
    class HeatingPumpTask
    class WaterPumpTask
    class ReturnPreheater
}

BurnerSystemController ..> BurnerMode
BurnerSystemController ..> PowerLevel
BurnerSystemController --> RelayControlTask : setRelayState R1-R3\nsetRelayStateEmergency R1-R3 off
RelayControlTask ..> RelayIndex
RelayControlTask --> RYN4ProcessingTask : desired relay states\n(Modbus write at next SET tick)

BurnerStateMachine --> BurnerSystemController : activate / switchMode /\nsetPowerLevel / deactivate /\nemergencyShutdown
CentralizedFailsafe --> BurnerSystemController : emergencyShutdown
BurnerControlTask --> BurnerSystemController : deactivate on system disable
ErrorHandler --> BurnerSystemController : emergencyShutdown (failsafe)

HeatingPumpTask --> RelayControlTask : RelayRequest HEATING_PUMP_ON/OFF\n(R5, follows HEATING_ON)
WaterPumpTask --> RelayControlTask : RelayRequest WATER_PUMP_ON/OFF\n(R6, follows WATER_ON)
ReturnPreheater ..> HeatingPumpTask : cycles the heating pump\nwhile preheating

note right of BurnerSystemController
  Controls only the burner relays R1-R3.
  Pumps are never commanded here.

  emergencyShutdown() switches R1-R3 off with
  setRelayStateEmergency, which bypasses the
  rate limit and pump protection.

  BurnerStateMachine calls run in the
  BurnerControlTask context.
end note

note bottom of RelayControlTask
  Rate limit: 150 ms minimum interval,
  30 toggles per minute per relay.
  Rate limit and pump protection apply only
  to real state changes (RelayCommandPolicy);
  unchanged relay commands pass.

  Pump tasks set RelayRequest event bits;
  processRelayRequests() turns them into
  setRelayState() calls, which apply pump
  motor protection (checkPumpProtection).
end note

note bottom of WaterPumpTask
  Pump tasks follow HEATING_ON / WATER_ON
  with a 5 min overrun.
  EMERGENCY_STOP keeps the pumps ON
  until boiler output < 60°C, on again
  from 65°C, ON without a usable reading
  (F13 emergency heat dissipation).
  After release they continue until < 60°C.
  A pump task re-sends its request every 2 s
  while the relay does not match.
end note

@enduml
